--- a/index.html
+++ b/index.html
@@ -11,27 +11,6 @@
     <div class="container">
         <div class="content">
             <h1>Coming Soon</h1>
-            <p>Our website is under construction. We'll be here soon with our new awesome site.</p>
-            <div id="countdown">
-                <div>
-                    <span id="days"></span>
-                    <div>Days</div>
-                </div>
-                <div>
-                    <span id="hours"></span>
-                    <div>Hours</div>
-                </div>
-                <div>
-                    <span id="minutes"></span>
-                    <div>Minutes</div>
-                </div>
-                <div>
-                    <span id="seconds"></span>
-                    <div>Seconds</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
+            <p>"The test will start today at 3 PM."</p>
 </body>
 </html>
